# websocket_buzzer

./: .gitignore  README.md  pyproject.toml  requirements.txt
websocket_buzzer/backend/: app.py  buzzer.py
websocket_buzzer/frontend/: css_reset.css  index.html  main.js  style.css
websocket_buzzer/webserver/: app.py
websocket_buzzer/webserver/static/: main.js  style.css
websocket_buzzer/webserver/templates/: base.html  blu_player.html  blue_player.html  green_player.html  index.html  red_player.html  referee.html  yellow_player.html
websocket_buzzer/websocket/: app.py  buzzer.py
