[tool.poetry]
name = "websocket-buzzer"
version = "0.1.0"
description = ""
authors = ["Édouard Lefizelier <edouardlefi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.3.0"
websockets = "^12.0"
flask = "^3.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
